Fix health cap, cleanup ghost users, fix special attack ValueError, and isolate tests

--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,12 @@ settings.sync-conflict-*
 images/
 Stickers/
 .obsidian/
-test_output.txt
-remaining_images.txt
-weekly_post_draft.txt
-verify_fix.py
-verify_invincibility.py
-process_events.py
+*.txt
+points
+*.bak
+migrate_dietpi_schema.py
+update_json_paths.py
+find_missing_images.py
+repro_tnt_logic.py
+run_tests.py
+test_points.db
