Fix: Aggro system, Death Logic, Fatigue State and Docker memory limits
- Implemented weighted aggro system (Damage + Defense x2)
- Fixed recursive achievement bug
- Implemented strict death check (HP<=0 blocks all actions)
- Implemented Fatigued state (<5% HP blocks Attack, allows Defend)
- Optimized DB connection pool size and Docker memory limits for stability

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,8 +25,8 @@ services:
     deploy:
       resources:
         limits:
-          cpus: '0.5'
-          memory: 512M
+          cpus: '1.0'
+          memory: 1G
         reservations:
           cpus: '0.25'
           memory: 256M
