--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,53 @@ Stickers/
 
 points
 *.bak
-migrate_dietpi_schema.py
-update_json_paths.py
+*_snippet
+*.sql
+*.pg
+dumps/
+check_*.py
+fix_*.py
+init_*.py
+inspect_*.py
+list_*.py
+load_*.py
+reproduce_*.py
+test_result*.txt
+test_output.txt
+migrate_sqlite_to_pg.py
+backup_database.sh
+restore_backup.sh
+quick_docker_setup.sh
+deploy_dietpi.sh
+rollback_dietpi.sh
+add_test_resources.py
+balance_equipment.py
+count_rows.py
+find_leader.py
+get_next_batch_prompts.py
+move_generated_images.py
+populate_sets.py
+refactor_stats.py
+rename_images.py
+sync_db.py
+prod_dump.sql
+sync_prod_to_local.sh
+verify_defense.py
+update_characters_with_metadata.py
+update_schema*.py
+BACKUP_GUIDE.md
 find_missing_images.py
+migrate_dietpi_schema.py
+missing_images_list.txt
+remaining_images.txt
 repro_tnt_logic.py
 run_tests.py
-test_points.db
+setup_backups.sh
+test_cm_err.txt
+update_json_paths.py
+docs/EQUIPMENT_GUIDE.md
+scripts/fix_base_stats.py
+scripts/maintenance/sort_images_by_level.py
+scripts/maintenance/sync_image_sources.py
+scripts/fix_base_stats.py
+scripts/fix_base_stats.py
