--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ scripts/maintenance/sort_images_by_level.py
 scripts/maintenance/sync_image_sources.py
 scripts/fix_base_stats.py
 scripts/fix_base_stats.py
+full_test_output*.txt
+test*.txt
